fix: images overflow

--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -26,6 +26,7 @@
   max-width: 100%;
   border-radius: 10px 10px 0 0;
   overflow: hidden;
+  object-fit: cover;
 }
 
 .elements__text {
