--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -14,6 +14,7 @@
   margin: 0 auto 26px;
   border-radius: 50%;
   max-width: 122px;
+  object-fit: cover;
 }
 
 @media screen and (min-width: 900px) {
